# open-brain

./: .env.example  .env.schema  .gitignore  .rsync-exclude  AGENTS.md  CONTRIBUTING.md  GLOSSARY.md  LEARNINGS.md  LICENSE  README.md  _AGENTS.md  bunfig.toml  fetch-secrets.sh  goal-run.md  list-stale.patch  package.json  patch_list_recent.cjs  review.md  test-find-duplicates.ts  tsconfig.json
.githooks/: pre-push
.github/: pull_request_template.md
.pi/: taskplane.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  agent-reference.md  config.json
contracts/: README.md  check-parity.ts  parity-paths.txt
deploy/: open-brain.service
docs/: CONTRIBUTING.md  GLOSSARY.md  README.md  agent-context-pack-contract.md  agent-memory-adapter-contract.md  agent-memory-substrate-plan.md  backup-restore.md  collab-retirement-preflight.md  compatibility-matrix.md  conversation-facts-contract.md  core01-nats-worker-runbook.md  downstream-rollout.md  drop-folder-collector.md  embedding-repair.md  fleet-nats-integration.md  fts-operations.md  graph-derivation.md  identity-boundary.md  local-clone-dogfood.md  local-release-deploy-sop.md  memory-contract.md  memory-limits.md  nats-jetstream-foundation.md  ob-v2-plan.md  operator-audit-log.md  plan-3f-gbrain-sprint.md  plan-3f-open-issues.md  realtime-agent-memory-research.md
hooks/: open-brain-session-capture.ts  open-brain-session-load.ts  open-brain-session-save.ts
python/openbrain-memory/: README.md  pyproject.toml
python/openbrain-memory/src/openbrain_memory/: __init__.py  __main__.py  _runtime_router.py  _runtime_spool.py  _runtime_validation.py  agent.py  cli.py  client.py  contract.py  dream.py  maintenance.py  nats_wire.py  policy.py  runtime.py  schema.py  spool.py  turn_concepts.py
python/openbrain-memory/tests/: __init__.py  _runtime_fakes.py  test_agent.py  test_client.py  test_contract.py  test_contract_fixtures.py  test_dream.py  test_live_canary.py  test_maintenance.py  test_nats_wire.py  test_runtime.py  test_runtime_contract_gate.py  test_runtime_direct_scope.py  test_runtime_fallback.py  test_runtime_reflex.py  test_safety.py  test_schema.py  test_spool.py  test_turn_concepts.py
python/openbrain-memory/tests/fixtures/: nats-context-pack-wire.json
scripts/: archive-idle-session-lanes.test.ts  archive-idle-session-lanes.ts  assert-db-tests-ran.test.ts  assert-db-tests-ran.ts  backfill.test.ts  backfill.ts  backup-lib.test.ts  backup-lib.ts  backup-verify.ts  backup.test.ts  backup.ts  bulk-import.ts  cluster-promoted-thought.ts  codex-memory-smoke.ts  core01-deploy-local.integration.test.ts  core01-deploy-local.sh  core01-qmd-bootstrap.sh  core01-sync-development.sh  curate.ts  deploy-ref-gate.test.ts  deploy-ref-gate.ts  eval-open-brain-live.ts  eval-open-brain-memory.ts  generate-tokens.sh  import-legacy-kb.ts  install-hooks.sh  local-clone.test.ts  local-clone.ts  migrate.ts  ob-backfill.test.ts  ob-backfill.ts  obsidian-sync.ts  promote-lane-shared.test.ts  promote-lane-shared.ts  promote-legacy-shared.ts  (+16 more)
(+440 files in other folders)
